--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <title>KayBeazy Blog</title>
 </head>
 <body>
-<h1>Welcome to my website</h1>
-  <!-- index.html -->
-<h1>Welcome to my website!</h1>
+<h1>Welcome to my site</h1>
 <ul>
   {% for file in site.pages %}
     {% if file.path contains 'pages/' %}
