--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
----
-layout: default
-title: Welcome to my page 🤗 
----
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Redirects</title>
+</head>
+<body>
+  <h1>Redirects</h1>
+  <ul>
+    <li><a href="pages/test1.html">Test 1</a></li>
+    <li><a href="pages/test2.html">Test 2</a></li>
+  </ul>
+</body>
+</html>
