--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </main>
     <footer>
         <p>Connect with me:</p>
-        <a href="https://twitter.com/yourhandle" target="_blank">Twitter</a> |
+        <a href="https://twitter.com/kelexbawz" target="_blank">Twitter</a> |
         <a href="https://linkedin.com/in/yourhandle" target="_blank">LinkedIn</a> |
         <a href="https://github.com/yourhandle" target="_blank">GitHub</a>
     </footer>
